Added set -euoE pipefail to all sh scripts

--- a/assisted-service/register-cluster.template
+++ b/assisted-service/register-cluster.template
@@ -1,4 +1,5 @@
-#!/bin/bash
+#!/usr/bin/env bash
+set -euoE pipefail ## -E option will cause functions to inherit trap
 
 PULL_SECRET='YOUR_PULL_SECRET'
 
